Refactored Select component to fix on safari

--- a/src/app/ui/components/Select/Select.module.scss
+++ b/src/app/ui/components/Select/Select.module.scss
@@ -48,7 +48,7 @@ $option_padding: 5px;
     background-color: var(--primary-colour-base-opaque1);
     transition: background-color $menu_transition;
 
-    option {
+    .option {
       overflow: hidden;
       z-index: 1;
       padding: 2px $option_padding;
